--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,72 @@
-flask
-pymongo
-json
-datetime
+BeautifulSoup==3.2.1
+Flask==0.10.1
+Jinja2==2.7.2
+MarkupSafe==0.21
+Pillow==2.3.0
+PyRSS2Gen==1.0.0
+Twisted==12.2.0
+Werkzeug==0.9.4
+altgraph==0.10.1
+bdist-mpkg==0.4.4
+bonjour-py==0.3
+cql==1.4.0
+facebook-sdk==0.4.0
+gunicorn==19.1.1
+html2text==3.200.3
+itsdangerous==0.24
+macholib==1.5
+matplotlib==1.1.1
+mechanize==0.2.5
+## FIXME: could not find svn URL in dependency_links for this package:
+mercurial==2.0-20111101
+modulegraph==0.10.1
+numpy==1.6.2
+py2app==0.7.1
+pyOpenSSL==0.13
+pymongo==2.7
+pyobjc-core==2.3.2a0
+pyobjc-framework-AddressBook==2.3.2a0
+pyobjc-framework-AppleScriptKit==2.3.2a0
+pyobjc-framework-AppleScriptObjC==2.3.2a0
+pyobjc-framework-Automator==2.3.2a0
+pyobjc-framework-CFNetwork==2.3.2a0
+pyobjc-framework-Cocoa==2.3.2a0
+pyobjc-framework-Collaboration==2.3.2a0
+pyobjc-framework-CoreData==2.3.2a0
+pyobjc-framework-CoreLocation==2.3.2a0
+pyobjc-framework-CoreText==2.3.2a0
+pyobjc-framework-DictionaryServices==2.3.2a0
+pyobjc-framework-ExceptionHandling==2.3.2a0
+pyobjc-framework-FSEvents==2.3.2a0
+pyobjc-framework-InputMethodKit==2.3.2a0
+pyobjc-framework-InstallerPlugins==2.3.2a0
+pyobjc-framework-InstantMessage==2.3.2a0
+pyobjc-framework-InterfaceBuilderKit==2.3.2a0
+pyobjc-framework-LatentSemanticMapping==2.3.2a0
+pyobjc-framework-LaunchServices==2.3.2a0
+pyobjc-framework-Message==2.3.2a0
+pyobjc-framework-OpenDirectory==2.3.2a0
+pyobjc-framework-PreferencePanes==2.3.2a0
+pyobjc-framework-PubSub==2.3.2a0
+pyobjc-framework-QTKit==2.3.2a0
+pyobjc-framework-Quartz==2.3.2a0
+pyobjc-framework-ScreenSaver==2.3.2a0
+pyobjc-framework-ScriptingBridge==2.3.2a0
+pyobjc-framework-SearchKit==2.3.2a0
+pyobjc-framework-ServiceManagement==2.3.2a0
+pyobjc-framework-SyncServices==2.3.2a0
+pyobjc-framework-SystemConfiguration==2.3.2a0
+pyobjc-framework-WebKit==2.3.2a0
+pyobjc-framework-XgridFoundation==2.3.2a0
+python-dateutil==1.5
+pytz==2012d
+requests==2.2.1
+scipy==0.11.0
+sh==1.09
+thrift==0.9.2
+vboxapi==1.0
+virtualenv==1.11.2
+wget==2.0
+wsgiref==0.1.2
+xattr==0.6.4
+zope.interface==3.8.0
